--- a/app/src/main/res/drawable/song_gradient_cover.xml
+++ b/app/src/main/res/drawable/song_gradient_cover.xml
@@ -19,6 +19,6 @@
     <gradient
         android:angle="-90"
         android:endColor="@color/transparent"
-        android:startColor="@color/white50"
+        android:startColor="@color/white_50"
         android:type="linear" />
 </shape>
