--- a/app/src/main/res/color/color_on_surface_20.xml
+++ b/app/src/main/res/color/color_on_surface_20.xml
@@ -18,5 +18,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:alpha="0.20"
-        android:color="?attr/colorOnSurface" />
+        android:color="?colorOnSurface" />
 </selector>
