--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -44,13 +44,13 @@
         android:id="@+id/ink_page_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:currentPageIndicatorColor="@color/color_primary_variant"
+        app:currentPageIndicatorColor="?colorPrimaryVariant"
         app:dotGap="@dimen/indicator_gap"
         app:layout_constraintBottom_toBottomOf="@id/btn_on_boarding_continue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/btn_on_boarding_continue"
-        app:pageIndicatorColor="@color/color_primary" />
+        app:pageIndicatorColor="?colorPrimary" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_on_boarding_continue"
