--- a/app/src/main/res/layout/on_boarding_permissions_item.xml
+++ b/app/src/main/res/layout/on_boarding_permissions_item.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright 2019 Felipe Joglar Santos
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -44,6 +45,7 @@
         android:gravity="center"
         android:text="@string/on_boarding_notification_access"
         android:textAppearance="?textAppearanceSubtitle1"
+        android:textColor="?colorOnSurface"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_on_boarding" />
